compiler/testData/diagnostics/tests/invalidFileNames/a.1.kt
<!INVALID_FILE_NAME!>package zz2

fun test() {

}<!>